--- a/webolement_components/app.html
+++ b/webolement_components/app.html
@@ -1,4 +1,10 @@
 <template>
+    <ul>
+        <li><a href="/">launcher</a></li>
+        <li><a href="/test">test page</a></li>
+        <li><a href="/home">home page</a></li>
+        <li><a href="/user">user page</a></li>
+    </ul>
     <router-view></router-view>
     <modal-view :value="NeedReset" :closable="false" @closed="model_closed">
         <div style="display: flex;justify-content: center;text-align: center;flex-direction: column;">
